<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.login.LoginFragment">

    <data>
        <variable name="handlers" type="com.ordy.app.ui.login.login.LoginHandlers" />
        <variable name="viewModel" type="com.ordy.app.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/divider_horizontal"
        android:showDividers="middle"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginCardHeaderText"
            android:text="@string/title_login"/>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email_black_24dp"
            app:errorEnabled="true"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.emailLoginData}"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.passwordLoginData}"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> handlers.onLoginClick()}"
            android:text="@string/login" />

        <!-- Goto Register Button -->
        <Button
            android:id="@+id/button_goto_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:onClick="@{() -> handlers.onGotoRegisterClick()}"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

    </LinearLayout>

</layout>