...
            android:layout_marginBottom="5dp"
            android:hint="@string/debts_search"
            app:startIconDrawable="@drawable/ic_search_black_24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/payments_debts_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.debtsSearch}" />
        </com.google.android.material.textfield.TextInputLayout>

...
                android:id="@+id/payments_debts_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Debts -->
                <ListView
                    android:id="@+id/payments_debts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:drawSelectorOnTop="true" />

...
