...
            android:layout_marginBottom="5dp"
            android:hint="@string/debtors_search"
            android:maxLines="1"
            app:startIconDrawable="@drawable/ic_search_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/payments_debtors_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.debtorsSearch}" />
        </com.google.android.material.textfield.TextInputLayout>

...
                android:id="@+id/payments_debtors_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Debtors -->
                <ListView
                    android:id="@+id/payments_debtors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:drawSelectorOnTop="true" />

...
