...

    <!-- Payments -->
    <string name="payment_user_header">User:&#160;</string>
    <string name="payment_group_header">Group:&#160;</string>

    <!-- Debts -->
    <string name="debts_tab_title">Your debts</string>
    <string name="no_debts_title">No debts found</string>
    <string name="no_debts_description">You currently have no debts</string>
    <string name="debts_search">Search for creditor</string>

    <!-- Debtors -->
    <string name="debtors_tab_title">Debtors</string>
...
